app/components/ui/main.css
/* Space out content a bit */
body {
  padding: 0px;
  margin: 0;
}

.marketing,
.footer,
.container-fluid {
  padding: 0px;
  margin: 0;
}

#header {
  height: 40px;
  position: absolute;
  padding: 5px 20px;
  top: 0;
  left: 0;
  right: 0;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.navbar-toggle {
  display: inline-block;
  float: left;
  padding: 5px;
  margin: 0;
  background-color: buttonface;
}

.icon-bar {
  background-color: red;
}

/* Custom page footer */

#ui {
  background-color: #eee;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 0.9;
}

#ui .title, #ui p {
  padding: 0 5px;
}

#ui .title, #ui .title + p {
  text-align: center;
}

#ui .collapsed > a > .caret, #ui a.collapsed > .caret, .caret.collapsed {
  border: 1px solid red;
  border-left: 4px solid;
  border-right: 4px solid transparent;
  border-bottom: 4px solid transparent;
  border-top: 4px solid transparent;
}

#ui:hover {
  opacity: 1;
}

.panel-group .panel {
  overflow: visible;
}

#content {
  overflow: hidden;
}

#footer {
  height: 30px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #f5f5f5;
  color: #777;
  border-top: 1px solid #e5e5e5;
}


/* Customize container */

@media (min-width: 768px) {
  .container {
    max-width: 730px;
  }
}
@media (min-width: 1200px) {
  .container {
    max-width: 1170px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

.rotate {
  display: inline-block;
}



.snap-content {
  background-color: white;
}

#ui .panel-group .panel {
  border-radius: 0;
  background-color: transparent;
  border: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}

#ui .panel-heading {
  padding: 10px 5px;
  border: 0;
  border-radius: 0;
  background-color: buttonface;
  cursor: pointer;
}

#ui .panel-body {
  padding: 15px 5px;
}

#ui .panel .panel-title a:after {
    font-family: 'Glyphicons Halflings';
    content: "\e114";
    float: right;
    color: grey;
    font-size: 12px;
    margin: 5px 5px;
}

#ui .panel.collapsed .panel-title a:after {
    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
}

.btn-vert-block > button{
  margin-bottom:5px;
}

.multiSelect.inlineBlock {
  display: inline;
}

.multiSelect .button {
  width: 100%;
}

.multiSelect .show {
  width: 320px;
  overflow-y: auto;
  height: 300px;
}

.panel-right {
  /* border: 2px solid green; */
  padding: 0;
  position: absolute;
  top: 0px;
  bottom: auto;
  right: 0px;
  left: auto;
  /* width: 400px; */
  max-height: 100%;
  z-index: 100;
  overflow-y: auto;
  overflow-x: clip;
}

.growl {
  right: auto;
  left: 10px;
  width: 400px;
}

.growl .alert {
  margin-bottom: 4px;
}

.new-tip {
  line-height: 1;
  /* font-weight: bold; */
  padding: 12px;
  opacity: 0.7;
  /* background: rgba(0, 0, 0, 0.8);
  color: #fff;*/
  border-radius: 4px;
  width: 100%;
  margin-top: 5px;
}

.new-tip h5 {
  font-weight: bold;
}

.position-fixed {
  position: fixed;
}

.pointer {
  cursor: pointer;
}

.new-tip:hover, .new-tip.hover {
    opacity: 1;
}

.animate-fade {

}

.chosen-container-multi {
width: 100% !important;
}

.chosen-container-multi .chosen-choices li.search-field input[type="text"] {
height: auto;
}

.chosen-choices .search-field:first-child input[type="text"] {
  width: 100% !important;
}

.animate-fade.ng-hide-add, .animate-fade.ng-hide-remove,
.animate-fade.ng-enter, .animate-fade.ng-leave {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;
  /* display:block!important; */
}

.animate-fade.ng-hide-add.ng-hide-add-active,
.animate-fade.ng-hide-remove,
.animate-fade.ng-enter,
.animate-fade.ng-leave.ng-leave-active {
  opacity: 0;
}

.animate-fade.ng-hide-add,
.animate-fade.ng-hide-remove.ng-hide-remove-active,
.animate-fade.ng-leave,
.animate-fade.ng-enter.ng-enter-active {
  opacity: 1;
}

.animate-thin {

}

.animate-thin.ng-hide-add, .animate-thin.ng-hide-remove,
.animate-thin.ng-enter, .animate-thin.ng-leave {
  -webkit-transition:all linear 0.5s;
  -moz-transition:all linear 0.5s;
  -o-transition:all linear 0.5s;
  transition:all linear 0.5s;
  display:block!important;
  position: relative;
}

.animate-thin.ng-hide-add.ng-hide-add-active,
.animate-thin.ng-hide-remove,
.animate-thin.ng-enter,
.animate-thin.ng-leave.ng-leave-active {
  left: 100%;
}

.animate-thin.ng-hide-add,
.animate-thin.ng-hide-remove.ng-hide-remove-active,
.animate-thin.ng-leave,
.animate-thin.ng-enter.ng-enter-active {
  left: 0;
}

/* Multilevel menu */

#vis .dropdown-menu {
  min-width: 260px;
  z-index: 2000;
}

.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #ccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}

.nav-tabs > li {
  cursor: pointer;
}

.btn-icon {
  padding: 0;
  background-color: none;
  color: inherit;
}

.icon-check, input[type=checkbox].glyphicon:before, input[type=checkbox].fa:before {
  visibility: visible;
  opacity:0.5;
}

.icon-check.icon-checked, input[type=checkbox].glyphicon:checked:before, input[type=checkbox].fa:checked:before {
  opacity:1;
}

input[type=checkbox].glyphicon,input[type=checkbox].fa{
  visibility: hidden;
}

.icon-checked.glyphicon-eye-close:before, input[type=checkbox].glyphicon-eye-close:checked:before {
  content: "\e105";
}

.icon-checked.fa-unlock:before, input[type=checkbox].fa-unlock:checked:before {
  content: "\f023";
}

.dropdown, .modal-dialog {
  z-index: 2000;
}

.modal-content button.close {
padding: 10px;
}

.modal-content .nav-tabs > li {
margin: 10px 0px -1px 10px;
}

.ngHeaderButton {
  -moz-border-radius: 10%;
  -webkit-border-radius: 10%;
  border-radius: 10%;
  width: auto;
  height: auto;
  top: 2px;
  text-size: 10px;
  padding: 3px 5px;
}

.ngRow .locked {
  color: #aaa;
}

.select2-container {
  width: 100%;
}

